--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-generate-keypair/node_modules/
-generate-keypair/package-lock.json
-generate-keypair/package.json
+node_modules/
+package-lock.json
+package.json
 .env
